--- a/data/coco128.yaml
+++ b/data/coco128.yaml
@@ -10,8 +10,8 @@
 # download: https://github.com/ultralytics/yolov5/releases/download/v1.0/coco128.zip
 
 # train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
-train: ../plant11/images/train/  # 128 images
-val: ../plant11/images/val/  # 128 images
+train: /content/plant11/images/train/  # 128 images
+val: /content/plant11/images/val/  # 128 images
 
 # number of classes
 nc: 2
